--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,8 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.mention, .mention a {
+  color: #7289da;
+  background-color: #7289da1a;
+}
