--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,7 +29,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-.mention, .mention a {
+a.mention {
   color: #7289da;
   background-color: #7289da1a;
 }
