--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,9 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --mention-color: #5865f2;
+  --mention-background-color: #5865f226;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,9 +30,12 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --mention-color: #c9cdfb;
+  --mention-background-color: #5865f24c;
 }
 
 a.mention {
-  color: #7289da;
-  background-color: #7289da1a;
+  color: var(--mention-color);
+  background-color: var(--mention-background-color);
 }
