--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -9,8 +9,9 @@
 .button {
     color: var(--label-color);
     cursor: pointer;
+    display: inline-block;
     padding: 8px 16px;
-    margin: 4px 8px 4px 0;
+    margin: 0 8px 1.5rem 0;
     border: none;
     border-radius: 3px;
 }
