--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,14 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-base: 146.9 48.6%;
+  --ifm-color-primary: hsl(var(--ifm-color-primary-base) 35%);
+  --ifm-color-primary-dark: hsl(var(--ifm-color-primary-base) 31.5%);
+  --ifm-color-primary-darker: hsl(var(--ifm-color-primary-base) 29.75%);
+  --ifm-color-primary-darkest: hsl(var(--ifm-color-primary-base) 24.5%);
+  --ifm-color-primary-light: hsl(var(--ifm-color-primary-base) 38.6%);
+  --ifm-color-primary-lighter: hsl(var(--ifm-color-primary-base) 40.5%);
+  --ifm-color-primary-lightest: hsl(var(--ifm-color-primary-base) 45.6%);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
@@ -24,13 +25,14 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary-base: 167 68%;
+  --ifm-color-primary: hsl(var(--ifm-color-primary-base) 45.25%);
+  --ifm-color-primary-dark: hsl(var(--ifm-color-primary-base) 40.75%);
+  --ifm-color-primary-darker: hsl(var(--ifm-color-primary-base) 38.5%);
+  --ifm-color-primary-darkest: hsl(var(--ifm-color-primary-base) 31.75%);
+  --ifm-color-primary-light: hsl(var(--ifm-color-primary-base) 49.75%);
+  --ifm-color-primary-lighter: hsl(var(--ifm-color-primary-base) 52.25%);
+  --ifm-color-primary-lightest: hsl(var(--ifm-color-primary-base) 59%);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
   --mention-color: #c9cdfb;
